--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </section>
                     <section class="my-order">
                       <a href="" class="my-order__link">
-                        <b class="my-order__title"></b>
+                        <b class="my-order__title">Мой заказ</b>
                         <p class="my-order__numer">Пока пусто</p>
                       </a>
                     </section>
