--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <header class="page-header">
+    <div class="page-header__wrapper">
     <nav class="main-nav main-nav--opened">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
@@ -35,17 +37,18 @@
       <img class="page-header__logo-image" src="img/logo.png" width="64" height="64" alt="Лого Ресторана">
     </a>
     <div class="person">
-
+    <span class="visually-hidden">Лого заказчика</span>
+    </div>
     </div>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Меню ресторана</h1>
     <section class="order">
       <div class="order__wrapper">
-        <h2 class="order__title">
-          Ресторан
-        </h2>
         <div class="order__container">
+          <h2 class="order__title">
+            Ресторан
+          </h2>
           <ul class="order__list">
             <li class="order__item">
               <p class="order__name">Кухня</p>
