--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
       <nav class="main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
+          <ul class="main-nav__list site__list">
             <li class="site-list__item">
-              <a class="main-nav__link main-nav__link--active">Рестораны</a>
+              <a class="main-nav__link" href="#">Рестораны</a>
             </li>
             <li class="site-list__item">
-              <a class="main-nav__link" href="photo.html">Доставка</a>
+              <a class="main-nav__link" href="#">Доставка</a>
             </li>
             <li class="site-list__item">
-              <a class="main-nav__link" href="form.html">О нас</a>
+              <a class="main-nav__link" href="#">Караоке</a>
+            </li>
+            <li class="site-list__item">
+              <a class="main-nav__link" href="#">О нас</a>
             </li>
             <li class="site-list__item">
               <a class="main-nav__link" href="#">Новости</a>
@@ -101,7 +104,7 @@
             <img src="img/catalog-img1.png" width="273" height="200" alt="фото каталога">
           </a>
           <div class="catalog__info-page">
-            <p class="catalog__info-name">Плов Чайханский<span class="catalog__info-weight">&nbsp;250 г<span></p>
+            <p class="catalog__info-name">Плов Чайханский<span class="catalog__info-weight">&nbsp;250 г</span></p>
               <p class="catalog__info-price">246 ₽</p>
             </div>
             <div class="catalog__discription">
@@ -113,7 +116,7 @@
               <img src="img/open.png" width="273" height="200" alt="фото каталога">
             </a>
             <div class="catalog__info-page">
-              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+              <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                 <p class="catalog__info-price">246 ₽</p>
               </div>
               <div class="catalog__discription">
@@ -125,7 +128,7 @@
                 <img src="img/catalog-img3.png" width="273" height="200" alt="фото каталога">
               </a>
               <div class="catalog__info-page">
-                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+                <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                   <p class="catalog__info-price">246 ₽</p>
                 </div>
                 <div class="catalog__discription">
@@ -137,7 +140,7 @@
                   <img src="img/catalog-img4.png" width="273" height="200" alt="фото каталога">
                 </a>
                 <div class="catalog__info-page">
-                  <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+                  <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                     <p class="catalog__info-price">246 ₽</p>
                   </div>
                   <div class="catalog__discription">
@@ -149,7 +152,7 @@
                     <img src="img/catalog-img5.png" width="273" height="200" alt="фото каталога">
                   </a>
                   <div class="catalog__info-page">
-                    <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+                    <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                       <p class="catalog__info-price">246 ₽</p>
                     </div>
                     <div class="catalog__discription">
@@ -161,7 +164,7 @@
                       <img src="img/catalog-img6.png" width="273" height="200" alt="фото каталога">
                     </a>
                     <div class="catalog__info-page">
-                      <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+                      <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                         <p class="catalog__info-price">246 ₽</p>
                       </div>
                       <div class="catalog__discription">
@@ -173,7 +176,7 @@
                         <img src="img/catalog-img7.png" width="273" height="200" alt="фото каталога">
                       </a>
                       <div class="catalog__info-page">
-                        <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+                        <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                           <p class="catalog__info-price">246 ₽</p>
                         </div>
                         <div class="catalog__discription">
@@ -185,7 +188,7 @@
                           <img src="img/catalog-img8.png" width="273" height="200" alt="фото каталога">
                         </a>
                         <div class="catalog__info-page">
-                          <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г<span></p>
+                          <p class="catalog__info-name">Плов Чайханский <span class="catalog__info-weight">&nbsp;250 г</span></p>
                             <p class="catalog__info-price">246 ₽</p>
                           </div>
                           <div class="catalog__discription">
