--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <section class="my-order">
         <a href="" class="my-order__link">
           <b class="my-order__title">Мой заказ</b>
-          <p class="my-order__number">Пока пусто</p>
+          <p class="my-order__number">Пока пусто :)</p>
         </a>
       </section>
     </div>
