--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
             </ul>
           </div>
         </div>
-        <div class="midal__buttoms">
-        <div class="midal__quantity">
-          <span>-</span>
+        <div class="modal__buttoms">
+        <div class="modal__quantity">
+          <span class="modal__quantity-number quantity-number__minus">-</span>
           <span>2</span>
-          <span>+</span>
+          <span class="modal__quantity-number quantity-number__plus">+</span>
         </div>
-        <button type="submit" class="midal__submit button">Готово</button>
+        <button type="submit" class="modal__submit button">Готово</button>
       </div>
       </div>
       <button class="modal__close" type="button">x</button>
